Use IFish and IRarity instead of internal impl